# CustomFlightController

./: Makefile  README.md  project_structure.txt
include/: amygdala.h  receiver.h  shared_state.h
lib/: maiden_flight_telemetry.md
onboardController/: CMakeLists.txt  README.md  maiden_flight.md
onboardController/include/: act.h  motorController.h  radioReceiver.h  radio_receiver.h  sense.h  sensorController.h  telemetry.h  telemetryRelay.h
onboardController/src/: act.cpp  main.cpp  motorController.cpp  radioReceiver.cpp  radio_receiver.cpp  sense.cpp  sensorController.cpp  telemetry.cpp  telemetryRelay.cpp
src/: Observer.cpp  amygdala.cpp  main.cpp  receiver.cpp
